--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,11 +52,13 @@ h6 {
   font-weight: bold;
 }
 
+/*
 a {
   color: #363636;
   outline: none;
   text-decoration: none;
 }
+ */
 
 a img {
   border: none;
