ux: Add layout for header section on landing page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,6 +54,40 @@ a.logo-font:visited {
 /* ----- END COMMON ELEMENTS ----- */
 
 
+/* ----- HOME PAGE ----- */
+.header {
+  position: relative;
+}
+
+.header img {
+  width: 100%;
+  object-fit: cover;
+  margin: 0 auto;
+}
+
+.header .content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
+
+.header .content,
+.header .content div {
+  width: 100%;
+  height: 100%;
+}
+
+.header .content div {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+/* ----- END HOME PAGE ----- */
+
+
 /* ----- ATTRACTIONS PAGE ----- */
 
 
