--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,8 @@
 :root {
   --primary: #ff69b4;
   --secondary: #444444;
-  --section-padding: 20px;
+  --section-padding-y: 20px;
+  --section-padding-x: 20px;
 }
 
 /* ----- COMMON ELEMENTS ----- */
@@ -28,7 +29,7 @@ body {
 .x-constraint {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 12px;
+  width: 100%;
 }
 
 .column {
@@ -52,12 +53,13 @@ body {
 /* NAVBAR */
 .navbar {
   border-bottom: 1px solid #eee;
+}
+.navbar div {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-end;
   gap: 20px;
-
+  padding: 4px var(--section-padding-x);
 }
 
 .logo-font {
@@ -77,39 +79,70 @@ a.logo-font:visited {
 
 
 /* ----- HOME PAGE ----- */
-.header {
+header {
   position: relative;
 }
 
-.header img {
+header img {
   width: 100%;
   object-fit: cover;
   margin: 0 auto;
 }
 
-.header .content {
+header .content {
   position: absolute;
   top: 0;
   left: 0;
   z-index: 10;
-  padding: var(--section-padding) 0;
 }
 
-.header .content,
-.header .content div {
+header .content,
+header .content div {
   width: 100%;
   height: 100%;
 }
 
-.header .content div {
+header .content div {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   align-items: flex-end;
+  padding: var(--section-padding-x) var(--section-padding-y);
 }
 
 #welcome {
-  padding: var(--section-padding) 0;
+  padding: var(--section-padding-x) var(--section-padding-y);
+}
+
+#welcome div {
+  display: flex;
+  flex-direction: column;
+}
+
+#attractions {
+  display: flex;
+  flex-direction: column;
+}
+
+#attractions .wrapper {
+  padding: var(--section-padding-x) var(--section-padding-y);
+}
+
+#attractions .attractions {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  width: 100%;
+}
+
+#attractions .attractions .attraction {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+#attractions .attraction img {
+  width: 100%;
 }
 
 /* ----- END HOME PAGE ----- */
