--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,7 @@ body {
   background-color: #fff;
   color: #555;
   font-family: 'Nunito', 'Arial', sans-serif;
-  font-size: 62.5%;
+  font-size: 16px;
   font-weight: 400;
   overflow-x: hidden;
 }
@@ -54,6 +54,7 @@ body {
 .navbar {
   border-bottom: 1px solid #eee;
 }
+
 .navbar .content {
   display: flex;
   flex-direction: row;
@@ -64,7 +65,8 @@ body {
 
 .logo-font {
   font-family: 'Lobster Two', 'Times New Roman', serif;
-  font-size: 3rem;
+  font-size: 2.3rem;
+  padding: 4px 0;
 }
 
 a.logo-font:link,
