ux: Add layout to category section on shop page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -200,6 +200,26 @@ header .content div {
   display: flex;
   flex-direction: column;
   padding: var(--section-padding-x) var(--section-padding-y);
+#category .wrapper {
+  display: flex;
+  flex-direction: column;
+  padding: var(--section-padding-y) var(--section-padding-x);
+}
+
+#category .products-row {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+}
+
+#category .product-card {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+#category .product-card img {
+  max-height: 18rem;
 }
 
 /* ----- END ATTRACTIONS PAGE ----- */
