--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@
 :root {
   --primary: #ff69b4;
   --secondary: #444;
-  --section-padding-y: 20px;
+  --section-padding-y: 40px;
   --section-padding-x: 20px;
 }
 
@@ -81,7 +81,7 @@ footer .content {
   display: flex;
   flex-direction: row;
   gap: 30px;
-  padding: var(--section-padding-x) var(--section-padding-y);
+  padding: var(--section-padding-y) var(--section-padding-x);
 }
 
 footer .content div {
@@ -91,40 +91,40 @@ footer .content div {
 /* ----- END COMMON ELEMENTS ----- */
 
 /* ----- HOME PAGE ----- */
-header {
+header.landing {
   position: relative;
   margin-bottom: var(--section-padding-y);
 }
 
-header img {
+header.landing img {
   width: 100%;
   object-fit: cover;
   margin: 0 auto;
 }
 
-header .content {
+header.landing .content {
   position: absolute;
   top: 0;
   left: 0;
   z-index: 10;
 }
 
-header .content,
-header .content div {
+header.landing .content,
+header.landing .content div {
   width: 100%;
   height: 100%;
 }
 
-header .content div {
+header.landing .content div {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   align-items: flex-end;
-  padding: var(--section-padding-x) var(--section-padding-y);
+  padding: var(--section-padding-y) var(--section-padding-x);
 }
 
 .hero {
-  padding: var(--section-padding-x) var(--section-padding-y);
+  padding: var(--section-padding-y) var(--section-padding-x);
 }
 
 .hero div {
@@ -138,7 +138,7 @@ header .content div {
 }
 
 #attractions .wrapper {
-  padding: var(--section-padding-x) var(--section-padding-y);
+  padding: var(--section-padding-y) var(--section-padding-x);
 }
 
 #attractions .attractions {
@@ -162,7 +162,7 @@ header .content div {
   display: flex;
   flex-direction: row;
   gap: 30px;
-  padding: var(--section-padding-x) var(--section-padding-y);
+  padding: var(--section-padding-y) var(--section-padding-x);
 }
 
 #social .content div {
@@ -179,7 +179,7 @@ header .content div {
   display: flex;
   flex-direction: row;
   gap: 30px;
-  padding: var(--section-padding-x) var(--section-padding-y);
+  padding: var(--section-padding-y) var(--section-padding-x);
 }
 
 #categories .category {
@@ -199,7 +199,9 @@ header .content div {
 #promotions .wrapper {
   display: flex;
   flex-direction: column;
-  padding: var(--section-padding-x) var(--section-padding-y);
+  padding: var(--section-padding-y) var(--section-padding-x);
+}
+
 #category .wrapper {
   display: flex;
   flex-direction: column;
