ux: Add layout to attraction hero section

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -180,6 +180,34 @@ header.landing .content div {
 
 /* ----- ATTRACTION PAGE ----- */
 
+.attraction-hero {
+  background-image: url("https://via.placeholder.com/1200x400.png");
+  min-height: 20rem;
+}
+
+.attraction-hero .content,
+.attraction-hero {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+}
+
+.attraction-hero .content {
+  padding: var(--section-padding-y) var(--section-padding-x);
+}
+
+.attraction-hero .quote-wrapper {
+  flex-grow: 2;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.attraction-hero .quote {
+  background-color: rgba(255, 255, 255, 60%);
+  padding: 30px;
+}
 
 /* ----- END ATTRACTIONS PAGE ----- */
 
