--- a/public/css/style.css
+++ b/public/css/style.css
@@ -209,6 +209,25 @@ header.landing .content div {
   padding: 30px;
 }
 
+#attraction-overview {
+  background-color: rgba(238, 238, 238, 60%);
+}
+
+#attraction-overview .content {
+  padding: var(--section-padding-y) var(--section-padding-x);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+#attraction-restrictions {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  text-transform: uppercase;
+  font-size: 0.875rem;
+}
+
 /* ----- END ATTRACTIONS PAGE ----- */
 
 /* ----- SHOP PAGE ----- */
