--- a/public/css/style.css
+++ b/public/css/style.css
@@ -224,23 +224,26 @@ header.landing .content div {
 
 #attractions .attraction img {
   width: 100%;
-  margin-bottom: 4px;
+  margin-bottom: 8px;
   object-fit: cover;
   height: 400px;
+  border-radius: 15px;
 }
 
 #social .content {
   display: flex;
   flex-direction: row;
-  gap: 30px;
+  gap: 40px;
   padding: var(--section-padding-y) var(--section-padding-x);
+  padding-top: 0;
 }
 
-#social .content div {
+#social .card {
   flex-grow: 1;
   border: 1px solid grey;
   display: flex;
   flex-direction: column;
+  padding: 16px 20px;
 }
 
 /* ----- END HOME PAGE ----- */
