ux: Add styling to footer

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,9 +75,16 @@ p {
 
 .h3 {
   font-size: 1.3rem;
-  font-weight: 600;
+  font-weight: 700;
   margin-bottom: 8px;
   line-height: 135%;
+}
+
+.h4 {
+  font-size: 0.9rem;
+  font-weight: 700;
+  margin-bottom: 8px;
+  text-transform: uppercase;
 }
 
 /* LINKS */
@@ -126,6 +133,7 @@ a:hover {
 
 .logo-font {
   font-family: "Lobster Two", "Times New Roman", serif;
+  font-weight: 400;
   font-size: 2.3rem;
   padding: 4px 0;
 }
@@ -135,16 +143,24 @@ a.logo-font:visited {
   color: var(--primary);
 }
 /* FOOTER */
+footer {
+  background-color: var(--secondary);
+  color: #000;
+}
 
 footer .content {
   display: flex;
   flex-direction: row;
-  gap: 30px;
+  gap: 40px;
   padding: var(--section-padding-y) var(--section-padding-x);
 }
 
 footer .content div {
   flex-grow: 1;
+}
+
+footer ul {
+  padding-left: 18px;
 }
 
 /* ----- END COMMON ELEMENTS ----- */
