--- a/public/css/style.css
+++ b/public/css/style.css
@@ -90,12 +90,14 @@ p {
 }
 
 /* LINKS */
-a {
+a,
+.text-link {
   text-decoration: none;
   color: var(--secondary);
 }
 
-a:hover {
+a:hover,
+a:visited {
   color: #e84494;
 }
 
@@ -113,7 +115,6 @@ a:hover {
 .outlined-button {
   background-color: #fff;
   color: #333;
-  border: 1px solid #333;
 }
 
 /* NAVBAR */
