--- a/public/css/style.css
+++ b/public/css/style.css
@@ -275,35 +275,49 @@ header.landing .content div {
 /* ----- ATTRACTION PAGE ----- */
 
 .attraction-hero {
-  background-image: url("https://via.placeholder.com/1200x400.png");
+  background-image: url("https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_2000/v1656039885/wm-theme-park/dougp-Uh7-SkGMBho-unsplash_gsug7g.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  min-height: 20rem;
+  min-height: 40rem;
+  position: relative;
+}
+
+.attraction-hero .wrapper {
+  background: linear-gradient(transparent, rgb(0 0 0 / 30%));
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
 }
 
 .attraction-hero .content,
 .attraction-hero {
   display: flex;
   flex-direction: row;
-  align-items: stretch;
+  align-items: flex-end;
+  justify-content: space-between;
 }
 
 .attraction-hero .content {
   padding: var(--section-padding-y) var(--section-padding-x);
 }
 
-.attraction-hero .quote-wrapper {
-  flex-grow: 2;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: flex-end;
+.attraction-hero .h1 {
+  color: white;
+  margin-bottom: -10px;
 }
 
 .attraction-hero .quote {
-  background-color: rgb(255 255 255 / 60%);
+  background-color: rgb(255 255 255 / 70%);
   padding: 30px;
+  color: #000;
+  font-size: 20px;
 }
 
 #attraction-overview {
