--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,6 +89,13 @@ p {
   text-transform: uppercase;
 }
 
+.icon {
+  font-size: 1rem;
+  height: 26px;
+  width: 26px;
+  color: var(--secondary);
+}
+
 /* LINKS */
 a,
 .text-link {
@@ -329,14 +336,25 @@ header.landing .content div {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 
 #attraction-restrictions {
   display: flex;
   flex-direction: row;
-  gap: var(--section-padding-x);
-  text-transform: uppercase;
-  font-size: 0.875rem;
+  align-items: center;
+  gap: 40px;
+}
+
+#attraction-restrictions .h4 {
+  margin-bottom: 0;
+}
+
+#attraction-restrictions .stat {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 6px;
 }
 
 #attraction-description .content {
